# citadel

./: .gitignore  Cargo.toml
example/: config.toml
src/: app.rs  main.rs  periphery.rs  web.rs
src/app/: config.rs  info.rs  logging.rs  rest.rs  transport.rs
src/config/: error.rs  model.rs  reader.rs
src/periphery/: config.rs  gpio.rs  pin.rs  pwm.rs
src/periphery/gpio/: config.rs  hardware.rs  model.rs  rest.rs  service.rs  transport.rs
src/periphery/pin/: config.rs  hardware.rs  model.rs  service.rs  transport.rs
src/periphery/pwm/: config.rs  hardware.rs  model.rs  rest.rs  service.rs  transport.rs
src/web/: app.rs  info.rs
